# algo.learn

./: .gitignore  LICENSE  README.md
2 time and space complexity/: 2.2_Stars1.sh  2.2_Stars4.sh  OddNumbersCounter.sh
2.time and space complexity/: 2.2_Stars2.sh  2.2_Stars3.sh  3.2.mergesort.sh
3 ordering/3.1 basic ordering alogrithms/: Bubblesort.sh
3 ordering/3.4 distribution ordering algorithms/bucketsort/: Cargo.toml
3.ordering/3.1.basic ordering alogrithms/: Selectsort.sh
3.ordering/3.1.basic ordering alogrithms/excercises/: 3.1.2.sh  3.1.3.sh  3.1.5.insertionsort.sh
3.ordering/3.1.basic ordering alogrithms/exercises/: 3.1.1.plus.sh  3.1.1.sh
3.ordering/3.4 distribution ordering algorithms/exercises/3.4.6.hole_in_set/: Cargo.toml
3.ordering/3.4 distribution ordering algorithms/exercises/3.4.6.hole_in_set/src/: lib.rs
3.ordering/3.4 distribution ordering algorithms/lexbucketsort/: Cargo.toml
3.ordering/3.4 distribution ordering algorithms/radixsort/: Cargo.toml
3.ordering/3.4 distribution ordering algorithms/string_sorting/: Cargo.toml
3.ordering/excercises/3.3.5.heavier_item_balance_scale_search/: Cargo.toml
4 data structures/4.2 heaps/fixed_minimum_binary_heap/: Cargo.toml
4 data structures/4.2 heaps/heapsort/: Cargo.toml
4 data structures/4.3 trie/: Cargo.toml
4 data structures/4.3 trie/src/: lib.rs
4 data structures/4.3 tries/lr_trie/: Cargo.toml
4 data structures/exercises/4.3.2.trie_string_sort/: Cargo.toml
4 data structures/exercises/4.3.5_poetic_trie/: note
trials/bubblesort_vs_insertionsort/: Cargo.toml
(+117 files in other folders)
