[package]
name = "hole_in_set"
version = "0.1.0"
edition = "2021"
authors = ["bravequickcleverfibreyarn"]
description="Quick algorithm based on bucket sort idea for finding largest 'hole in set' where hole means xₗ < xₘ and no other x > xₗ and < xₘ. Simple extendable to support also non-set collection."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
